# long_context_discourse

./: .env.example  .gitignore  README.md  pyproject.toml
.mplconfig/: fontlist-v390.json
configs/: default.yaml  exp1.yaml  exp2.yaml  exp3.yaml  exp4.yaml  exp5.yaml  paid_full_base.yaml
configs/parallel/shards/: exp1.shard_deepseek_r1.yaml  exp1.shard_deepseek_v3.yaml  exp1.shard_gpt4o.yaml  exp1.shard_llama3_70b.yaml  exp1.shard_llama3_8b.yaml  exp1.shard_mistral_7b.yaml  exp1.shard_mixtral.yaml  exp1.shard_phi4.yaml  exp2.shard_deepseek_r1.yaml  exp2.shard_deepseek_v3.yaml  exp2.shard_gpt4o.yaml  exp2.shard_llama3_70b.yaml  exp2.shard_llama3_8b.yaml  exp2.shard_mistral_7b.yaml  exp2.shard_mixtral.yaml  exp2.shard_phi4.yaml  exp4.shard_deepseek_v3.yaml  exp4.shard_gpt4o.yaml  exp4.shard_llama3_70b.yaml  exp4.shard_mistral_7b.yaml  (+8 more)
processed/exp3_smoke/: gum_rst_processed.json
processed/exp4/: ted_mdb_processed.json
processed/exp4_smoke/: ted_mdb_processed.json
processed/pdtb/: pdtb_test_balanced.json
processed/pdtb_smoke/: pdtb_test_balanced.json  pdtb_train.json
results/: MASTER_DEMO.json  README.txt
results/exp1/: exp1_degradation.json  exp1_rows.json  exp1_summary.json  exp1_summary_f1.json
results/exp2/: exp2_fpar_by_type.json  exp2_fpar_summary.json  exp2_rows.json  exp2_spearman.json  exp2_summary.json  exp2b_rescue.json
results/exp4/: exp4_degradation_per_language.json  exp4_rows.json  exp4_summary_f1.json
results/exp5/: exp5_cot_rows.json  exp5_subset_pair_keys.json  exp5_summary.json
scripts/: analyze_all.py  bootstrap_demo_pipeline_outputs.py  compile_master_results.py  estimate_full_paid_sweep.py  generate_parallel_shard_configs.py  merge_parallel_results.py  prepare_gum.py  prepare_pdtb.py  prepare_ted_mdb.py  push_results_to_hf.py  run_exp1.py  run_exp2.py  run_exp2b.py  run_exp3.py  run_exp4.py  run_exp5.py  run_full_paid_api_experiments.sh  run_full_paid_parallel.sh  run_parallel_stage.py
src/long_context_discourse/: __init__.py  config.py  conversation.py  demo_pipeline_outputs.py  hf_upload.py  io_utils.py  judge.py  logging_utils.py  merge_parallel.py  metrics.py  models.py  padding.py  parsing.py  probing.py  prompts.py  scripts_entry.py  shard_resume.py
tests/: test_config.py  test_conversation.py  test_io_utils.py  test_merge_parallel.py  test_metrics.py  test_padding.py  test_parsing.py  test_pdtb_stratified.py  test_pipe.py  test_shard_resume.py
(+17 files in other folders)
